--- a/README
+++ b/README
@@ -1,16 +1,27 @@
-==========
-= README =
-==========
+README
+======
 
 This is the oscoin light node.
 
-Testing
+TESTING
 -------
 
 To load the tests in the repl, run::
 
   stack repl --test --main-is oscoin:test:test
 
-Then call the ``main`` function to run them.
+Then call the ``main`` function to run them, and reload with ``:r`` as
+necessary.
+
+DOCS
+----
+
+To generate local package documentation, run::
+
+  stack haddock oscoin
+
+To open the docs, run::
+
+  stack haddock oscoin --open
 
 .. vim: filetype=rst
